# aoc2022

./: Cargo.toml  README.md
.github/workflows/: readme-stars.yml
src/: helpers.rs  lib.rs
