[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
regex = "1.7.0"
ringbuffer = "0.10.0"
ansi_term = "0.12.1"
crate = "0.0.2"
text_io = "0.1.12"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
